--- a/lymph_node_demo.ipynb
+++ b/lymph_node_demo.ipynb
@@ -38,7 +38,8 @@
     "\n",
     "import scanpy as sc\n",
     "import matplotlib.pyplot as plt\n",
-    "from functions import chrysalis_plot, chrysalis_svg, chrysalis_pca, chrysalis_aa, plot_explained_variance, compartment_heatmap, get_compartment_df, plot_svgs, plot_weights, show_compartments"
+    "from functions import chrysalis_plot, chrysalis_svg, chrysalis_pca, chrysalis_aa, plot_explained_variance,\\\n",
+    "    compartment_heatmap, get_compartment_df, plot_svgs, plot_weights, show_compartments"
    ]
   },
   {
