--- a/docs/tutorials/lymph_node_tutorial.ipynb
+++ b/docs/tutorials/lymph_node_tutorial.ipynb
@@ -1,15 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Basic tutorial - Identifying tissue compartments in the human lymph node"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-05-04T10:15:12.879311100Z",
-     "start_time": "2023-05-04T10:15:11.149394900Z"
-    }
-   },
    "outputs": [
     {
      "name": "stderr",
@@ -40,7 +42,14 @@
     "import matplotlib.pyplot as plt\n",
     "from functions import chrysalis_plot, chrysalis_svg, chrysalis_pca, chrysalis_aa, plot_explained_variance,\\\n",
     "    compartment_heatmap, get_compartment_df, plot_svgs, plot_weights, show_compartments"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-04T10:15:12.879311100Z",
+     "start_time": "2023-05-04T10:15:11.149394900Z"
+    }
+   }
   },
   {
    "cell_type": "code",
