--- a/docs/tutorials/lymph_node_tutorial.ipynb
+++ b/docs/tutorials/lymph_node_tutorial.ipynb
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can look at the SVG signatures corresponding to the individual compartments with `ch.plot_heatmap`. By examining the heatmap, we can analyze the weights assigned to individual genes. Positive values indicate increased expression, while negative values indicate decreased expression in the respective compartments."
+    "We can visualize the SVG signatures associated with each tissue compartment using `ch.plot_heatmap`. This heatmap allows us to compare the signatures across compartments, providing valuable insights into functional similarities or differences. Within a specific compartment, positive weights highlight genes that, when expressed, play a pivotal role in defining the identity of that compartment. Conversely, negative values represent genes that are typically absent in the expression profile of the compartment."
    ]
   },
   {
@@ -297,7 +297,7 @@
     }
    ],
    "source": [
-    "ch.plot_heatmap(adata)\n",
+    "ch.plot_heatmap(adata, reorder_comps=True)\n",
     "plt.show()"
    ]
   },
@@ -363,7 +363,7 @@
     }
    ],
    "source": [
-    "ch.plot_compartments(adata, ncols=2)\n",
+    "ch.plot_compartments(adata, ncols=4)\n",
     "plt.show()"
    ]
   },
