--- a/article/IV_mouse_brain/ff/mouse_brain_ff.ipynb
+++ b/article/IV_mouse_brain/ff/mouse_brain_ff.ipynb
@@ -10,18 +10,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scanpy as sc\n",
-    "from tqdm import tqdm\n",
     "import seaborn as sns\n",
-    "import matplotlib as mpl\n",
-    "import archetypes as arch\n",
     "import colorsys\n",
     "import matplotlib.colors as mcolors\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import entropy\n",
-    "from scipy.stats import pearsonr\n",
-    "import sklearn.metrics as metrics\n",
-    "from scipy.spatial.distance import jensenshannon\n",
-    "from scipy.cluster.hierarchy import linkage, leaves_list"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -327,7 +319,7 @@
     "    a.axis('off')\n",
     "plt.subplots_adjust(hspace=0.05, wspace=0.01, left=0.05, right=0.95, top=0.95, bottom=0.05)\n",
     "for i, dim in enumerate([4, 15, 8, 1, 11]):\n",
-    "    ch.plot_compartment(adata, fig, axs[i], dim=ndims, selected_dim=dim, color_first='#2e2e2e', spot_size=0.85,\n",
+    "    ch.plot_compartment(adata, fig, axs[i], dim=28, selected_dim=dim, color_first='#2e2e2e', spot_size=0.85,\n",
     "                   rasterized=True)\n",
     "    axs[i].set_title(f'Compartment {dim}', size=14)\n",
     "plt.show()\n"
